# python-importlens

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  setup.py
examples/: example_usage.py
src/importlens/: __init__.py  importlens.py  verify.py
tests/: test_inspect_imports.py
