[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "importlens"
version = "0.1.0"
authors = [
  { name = "Lydia Zhang", email = "lydiazly2@gmail.com" },
]
description = "A Python module to inspects and verifies imported modules in the caller's frame and reconstruct the statements."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
"Homepage" = "https://github.com/lydiazly/python-importlens"
"Bug Tracker" = "https://github.com/lydiazly/python-importlens/issues"
